  div#bodyContent.
* (bug 30172) The check for posix_isatty() in maintenance scripts did not detect
  when the function exists but is disabled. Introduced Maintenance::posix_isatty()
* (bug 30264) Changed installer-generated LocalSettings.php to use require_once()
  instead require() for included extensions.
* Do not convert text in the user interface language to another script.

=== API changes in 1.19 ===
* (bug 19838) siprop=interwikimap can now use the interwiki cache.
* (bug 29748) Add API search prefix support.
* (bug 29684) Set forgotten parameter types in ApiQueryIWLinks.
* (bug 29685) do not output NULL parentid with list=deletedrevs&drprop=parentid.
* siprop=interwikimap and siprop=languages can use silanguagecode to have
  a best effort language name translation. Use CLDR extension for best result.
* (bug 30230) action=expandtemplates should not silently override invalid title inputs
* (bug 18634) Create API to fetch MediaWiki's language fallback tree structure
* (bug 26885) Allow show/hide of account blocks, temporary blocks and single IP blocks
  for list=blocks

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Uighur (Latin) (ug-latn) was incorrectly marked as right-to-left language.

=== Other changes in 1.19 ===
* jquery.mwPrototypes module was renamed to jquery.mwExtension.
* The maintenance script populateSha1.php was renamed to the more concise
  populateImageSha1.php

== Compatibility ==

MediaWiki 1.19 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for IBM
DB2 and Microsoft SQL Server.

The supported versions are:

* MySQL 4.0 or later
* PostgreSQL 8.3 or later
* SQLite 3
* Oracle 9.0.1 or later

== Upgrading ==
